--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
             <div class="underline"></div>
         </div>
         <div>
-            <!-- <button class="btn">
-                ALL
-            </button> -->
+            <div class="btn-container">
+                <button class="filter-btn" type="button" data-id="all">All</button>
+                <button class="filter-btn" type="button" data-id="Indian">Indian</button>
+                <button class="filter-btn" type="button" data-id="Italian">Italian</button>
+                <button class="filter-btn" type="button" data-id="American">American</button>
+                <button class="filter-btn" type="button" data-id="Dessert">Dessert</button>
+            </div>
         </div>
         <div class="section-center">
             <article class="menu-item">
@@ -29,8 +33,8 @@
                     <p class="item-text">Flat round mass of minced pork, which is fried and placed within in buns. Comes with Lettuce and mayonese</p>
                 </div>
             </article>
-            <article class="menu-item">
-                <img src="images/Pizza-3007395.jpg" class="photo" alt="menuItem">
+            <!-- <article class="menu-item">
+                <img src="images/Pizza.jpg" class="photo" alt="menuItem">
                 <div class="item-info">
                     <header>
                         <h3>PIZZA</h3>
@@ -48,7 +52,7 @@
                     </header>
                     <p>A regular thickshake with a variety of nuts and ice-cream(chocolat/vanila/butterscotch.. and 7 other flavours) as well</p>
                 </div>
-            </article>
+            </article> -->
         </div>
     </section>
     <script src="app.js"> </script>
